--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
 *{
     background-color: cornsilk;
 }
+button{
+    background-color: blue;
+}
+
+footer{
+    background-color: blue;
+    color: white;
+}
