--- a/index.css
+++ b/index.css
@@ -29,3 +29,29 @@ img{
     height: 400px;
     width: 400px;
 }
+.products{
+    
+}
+.location{
+    border: 2px;
+    float: left;
+    padding: 20px;
+    text-align: center;
+
+}
+.loc_pin{
+    height: 30px;
+    width: 20px;
+    position: relative;
+}
+.payments{
+    float: center;
+    padding: 20px;
+    text-align: center;
+}
+.smart{
+
+    height: 30px;
+    width: 20px;
+    position: a;
+}
