--- a/index.css
+++ b/index.css
@@ -26,10 +26,20 @@ color: red;
     width: 400px;
 }
 img{
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 200px;
+}
+.products h1{
+    color: blue;
+    text-align: left;
+}
+h1, h2{
+    color: blue;
 }
 .products{
+    width: 100%;
+    text-align: center;
+    height:500px
     
 }
 .location{
@@ -37,6 +47,7 @@ img{
     float: left;
     padding: 20px;
     text-align: center;
+    height: 200px;
 
 }
 .loc_pin{
@@ -45,13 +56,49 @@ img{
     position: relative;
 }
 .payments{
-    float: center;
+    margin: auto;
     padding: 20px;
     text-align: center;
+    height
 }
-.smart{
+.Smart{
 
-    height: 30px;
-    width: 20px;
+    height: 75px;
+    width: 75px;
     position: a;
+}
+.official{
+
+    border: 2px;
+    float: right;
+    padding: 20px;
+    text-align: center;
+    height: 200px;
+}
+.secure{
+    height: 100px;
+    width: 100px;
+}
+
+.properties{
+    height: 220px;
+}
+.palace{
+    float: left;
+    padding: 20px;
+    margin: 50px;
+    height: 200px;
+    width: 200px;
+}
+.rory{
+    position: relative;
+    margin: 50px;
+    height: 200px;
+    width: 200px;
+}
+.rexona{
+    float: right;    
+    margin: 50px;
+    height: 200px;
+    width: 200px;
 }
