--- a/index.css
+++ b/index.css
@@ -1,17 +1,90 @@
 * {
-    font-weight: 200;
+    font-weight: 400;
 }
 
 body {
     background-color: white;
+    padding: 50px;
 }
 
+/* */
 .home {
-    font-size: 20px;
-    border-bottom: 2px whitesmoke solid;
-    padding: 20px;
+    height: 100px;
+    font-size: 30px;
+    border-bottom: 5px whitesmoke solid;
+    padding: 30px;
 }
 
+.home a {
+    color: black;
+    text-decoration: none;
+    
+}
+.home a:active{
+    color: red;
+}
+
+.hm_v {
+    float: left;
+    font-family: sans serif;
+    font-size: 40px;
+    padding: 10px;
+    margin: 20px;
+    margin-right: 400px;
+}
+
+.hm_h {
+    padding: 10px;
+    width: 250px;
+    margin: 10px;
+    float: left;
+    font-style: underline;
+}
+
+.hm_r {
+    padding: 10px;
+    width: 250px;
+    margin: 10px;
+    float: left;
+
+}
+
+.hm_l {
+    width: 250px;
+    padding: 10px;
+    margin: 10px;
+    float: left;
+
+}
+
+.hm_a {
+    width: 250px;
+    padding: 10px;
+    margin: 10px;
+    float: left;
+}
+
+.hm_c {
+    width: 250px;
+    padding: 10px;
+    margin: 10px;
+    float: left;
+}
+.but_1 {
+    float: right;
+    width: 250px;  
+    margin:10px;
+    padding: 10px;
+    height: 80px;
+    color: white;
+    
+}
+.but_1 a{
+    color: white;
+}
+
+
+/* Helping*/
 .helping_1 {
     padding: 20px;
     height: 500px;
@@ -28,9 +101,19 @@ body {
 button {
     background-color: blue;
     color: white;
+    font-size: 20px;
     border-radius: 20px;
-    padding: 5px;
+    padding: 20px;
 }
+
+
+.but_2 {}
+
+.but_3 {}
+
+.but_4 {}
+
+.but_5 {}
 
 .footer {
     background-color: blue;
@@ -38,7 +121,8 @@ button {
 }
 
 a {
-    color: red;
+    color: white;
+    font-size: 1.5em;
 }
 
 .choose img_2 {
@@ -46,10 +130,7 @@ a {
     width: 400px;
 }
 
-img {
-    height: 200px;
-    width: 200px;
-}
+
 
 .products h1 {
     color: blue;
@@ -132,28 +213,33 @@ h2 {
 
 /*properties*/
 .properties {
-    height: 500px;
+    height: 750px;
     padding: 20px;
     margin: 20px;
-    border:  10px solid black;
 }
-.properties p{
+
+.properties p {
 
     text-align: center;
 }
-.prts_pal1{
+
+.prts_pal1 {
     float: left;
-    height:300px
+    height: 200px;
+    width: 200px;
     border: 10px black solid;
 }
-.prts_ror2{
+
+.prts_ror2 {
     margin: auto;
     border: 10px black solid;
 }
-.prts_rex3{
-    height: 300px;
+
+.prts_rex3 {
+    height: 100px;
+    width: 100px;
     padding: 20px;
-    float: right;
+
     border: 10px black solid;
 }
 
@@ -161,26 +247,30 @@ h2 {
 .customers {
     height: 500px;
     margin: 10px;
-    padding: 20px;;
+    padding: 20px;
+    ;
     border: 10px solid black;
 
-    
+
 
 }
-h1{
+
+h1 {
     text-align: center;
-    
+
 }
-.customers p{
+
+.customers p {
     text-align: center;
     font-weight: 100;
 
 }
+
 .cust_a_1 {
     height: 250px;
-    width:200px; 
-    padding:20px;
-    margin:20px;
+    width: 200px;
+    padding: 20px;
+    margin: 20px;
     margin-right: 40px;
     float: left;
     border: 10px solid black;
@@ -189,7 +279,7 @@ h1{
 .cust_a_2 {
 
     height: 250px;
-    width:200px;
+    width: 200px;
     padding: 20px;
     margin: auto;
     border: 10px solid black;
@@ -200,14 +290,14 @@ h1{
 .cust_a_3 {
 
     height: 250px;
-    width:200px; 
-    padding:20px;
-    margin:20px;
+    width: 200px;
+    padding: 20px;
+    margin: 20px;
     margin-left: 40px;
     float: right;
     border: 10px solid gold;
 
-    
+
 }
 
 /*Footer*/
