--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ body {
 }
 
 .home a:active {
+
     color: red;
 }
 
@@ -83,43 +84,100 @@ body {
 }
 
 .but_1 a {
+    background-color: blue;
     color: white;
 }
 
 
 /* Helping*/
+.Help_al {
+    background-color: white;
+    padding: 20px;
+    width: 100%;
+    height: 900px;
+}
+
 .helping_1 {
-    height: 500px;
-    padding: 10px;
-    background-color: antiquewhite;
-
-
-}
-
-.helping_1 h1 { 
-    text-align: left;
-    font-size: 4em;
-}
-
-.crt_p {
-    text-align: left;
-    font-size: ;
+    height: 800px;
+    width: 1000px;
+    padding: 20px;
     float: left;
-    height: 200px;
-    width: 200px;
-    border:  10px black solid;
+    text-align: left;
+    font-size: 1em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.helping_1 h1 {
+    text-align: left;
+    font-size: 5em;
+}
+
+.helping_1 p {
+    font-size: 2em;
+}
+
+.crt_p {}
+
 .House_Img {
-    height: 200px;
-    width: 200px;
-    float: left;
-    padding: 30px;
+    float: right;
+
 }
 
+.House_Img img {
+    margin: 20px;
+    height: 800px;
+    width: 1000px;
+    margin-right: 100px;
+}
 
 .but_2 {
     color: white;
     float: left;
+}
+
+.bt_2 {
+    color: white;
+    height: 100px;
+    padding: 10px;
+    margin: 10px;
+    float: left;
+}
+
+/**/
+.search {
+    width: 1100px;
+    padding:40px;
+    margin: auto;
+    font-size: 4em;
+    border: 10px black solid;
+}
+.loc{
+float: left;
+margin:10px;
+}
+.prot{
+    float: left;
+    margin:10px;
+}
+.type{
+    float: left;margin:10px;
+}
+.max{
+    float: left;
+    margin:10px;
+}
+.prices{
+    float: left;
+    margin:10px;
+}
+.search button{
+    font-size: 1em;
+color:white;
+}
+.search img{
+    background-color:blue;
+    height: 40px;
+    width: 40px;
 
 }
 
