--- a/index.css
+++ b/index.css
@@ -14,7 +14,6 @@ body {
     font-size: 20px;
     border-bottom: 5px whitesmoke solid;
     padding: 30px;
-    overflow: auto;
 }
 
 .hm_v {
@@ -29,6 +28,7 @@ body {
 .home a {
     color: black;
     text-decoration: none;
+    
 
 }
 
@@ -145,7 +145,7 @@ body {
 
 
 .video {
-    border: 10px black ;
+    border: 10px black;
 }
 
 .video_ico {
@@ -276,10 +276,12 @@ h2 {
     margin: 20px;
     border: 10px solid black;
 }
+
 .products h1 {
     color: blue;
     text-align: left;
 }
+
 .products .prd_in {
     font-size: 2em;
     border: 10px solid black;
@@ -340,11 +342,13 @@ h2 {
     height: 100px;
     width: 100px;
 }
-.choose{
+
+.choose {
     height: 1000px;
 
 }
-.choose_1{
+
+.choose_1 {
     float: left;
     width: 45%;
     height: 50%;
@@ -354,36 +358,42 @@ h2 {
     overflow-wrap: normal;
 }
 
-.choose_2{
+.choose_2 {
     float: right;
     text-align: center;
-    
+
     margin-right: 5px;
     font-size: 2em;
     width: 45%;
     height: 40%;
 }
-.choose_2 p{
+
+.choose_2 p {
     padding: 10px;
     width: 100%;
 }
 
-p .sidel1{
+p .sidel1 {
     text-align: left;
 
 }
-p .sidel2{
+
+p .sidel2 {
     text-align: left;
 }
-p .sider1{
+
+p .sider1 {
     text-align: right;
 }
-p .sider2{
-text-align: left;
+
+p .sider2 {
+    text-align: left;
 }
+
 /*properties*/
 .properties {
-    height: 750px;
+    height: 2300px;
+    width: 100%;
     padding: 20px;
     margin: 20px;
 }
@@ -392,32 +402,37 @@ text-align: left;
     border: 10px solid black;
     height: 1000px;
 }
-.main{
+
+.main {
     font-size: 2em;
-    border: black solid 10px;
+    border: blue solid 10px;
 
 }
-.properties p {
 
+.properties p {
+    width: 100%;
     text-align: center;
 }
-.prts{
-    height:auto;
+
+.prts {
+    width: fit-content;
+    height: 2000px;
 }
-.prts .palace{
+
+.prts .palace {
     float: left;
-    height: 1000px;
-    width: 1000px;
+    height: fit-content;
+    width: fit-content;
     padding: 10px;
-    border: 10px black solid;
 }
-.prts .ptrs_ror2{
-    margin: left;
+
+.prts .ptrs_ror2 {
+    position: right;
     height: 1000px;
-    width: 1000px;
-    border: 10px black solid;
+    width: fit-content;
 
 }
+
 /* Customers*/
 .customers {
     height: 500px;
