--- a/index.css
+++ b/index.css
@@ -146,7 +146,7 @@ body {
 
 
 .video {
-     : 10px black;
+    border : 10px black;
 }
 
 .video_ico {
@@ -328,7 +328,6 @@ h2 {
 
 #official {
 
-     : 2px;
     float: right;
     margin: auto;
     padding: 20px;
@@ -432,7 +431,7 @@ figcaption p{
     padding: 10px;
 }
 
-.prts .ptrs_ror2 {left;
+.prts .ptrs_ror2 {
     height: 1000px;
     width: fit-content;
 
@@ -488,7 +487,6 @@ h1 {
     margin: 20px;
     margin-left: 40px;
     float: right;
-     : 10px solid gold;
 
 
 }
