--- a/index.css
+++ b/index.css
@@ -1,17 +1,19 @@
 * {
-    font-weight: 400;
+    font-weight: 200;
 }
 
 body {
     margin: 0;
     background-color: white;
-    padding: 0px;
+    
+    font-size: 1em;
+    
 }
 
 /* */
 .home {
     height: 100px;
-    min-width: 500px;
+    min-width: 100px;
     font-size: 20px;
      -bottom: 5px whitesmoke solid;
     padding: 30px;
@@ -439,66 +441,73 @@ figcaption p{
 .prts 
 
 /* Customers*/
-.customers {
-    height: 500px;
-    margin: 10px;
+.customers_main{
+    margin: 20px;
+    height: 1000px;
+    margin: 100px;
     padding: 20px;
 
-
-
+    border: 10px blue solid;
 }
 
-h1 {
-    text-align: center;
+    .custo_in{
+        margin: 100px;
+        border: 10px solid red;
+        font-size: 2em;
+        text-align: center;
+    }
 
-}
 
-.customers p {
-    text-align: center;
-    font-weight: 100;
-
-}
 
 .cust_a_1 {
-    height: 250px;
-    width: 200px;
+    height: 900px;
+    width: 700px;
     padding: 20px;
-    margin: 20px;
+    margin: 40px;
     margin-right: 40px;
     float: left;
+
+    border: 10px solid black;
 
 }
 
 .cust_a_2 {
 
-    height: 250px;
-    width: 200px;
+    height: 900px;
+    width: 700px;
     padding: 20px;
-    margin: auto;
+    margin: 40px;
+    margin-right: 40px;
+    float: left;
 
-
+    border: 10px solid red;
 }
 
 .cust_a_3 {
-
-    height: 250px;
-    width: 200px;
+    height: 900px;
+    width: 700px;
     padding: 20px;
-    margin: 20px;
-    margin-left: 40px;
-    float: right;
+    margin: 40px;
+    margin-right: 40px;
+    float: left;
+
+    border: 10px solid yellow;
+}
+.but_5{
+float: right;
 }
 /*Footer*/
 .footer {
     background-color: blue;
     margin-top: 100px;
+    margin-bottom: 0px;
     padding-left: 20px;
     padding-right: 20px;
     color: white;
-    font-size: xx-large;
+    font-size: 50px;
     font-family: Arial Verdana;
     width: 100%;
-    height: 550px;
+    height: 1000px;
     display: block;
 }
 
@@ -511,7 +520,7 @@ h1 {
 
 .vallie {
     width: 300px;
-    padding: 20px;
+    padding-right: 20px;
     text-align: left;
     font-family: 'Geneva', Tahoma, sans-serif;
     float: left;
