--- a/index.css
+++ b/index.css
@@ -562,6 +562,6 @@ float: right;
     margin-top: 20px;
     margin-left: 10px;
     margin-right: 100px;
-    padding: 20px;
+    padding: 20px9;
     width: 200px;
 }
