--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ body {
 
 .helping_1 h1 {
     text-align: left;
-    font-size: 5em;
+    font-size: 3em;
 }
 
 .helping_1 p {
@@ -409,37 +409,53 @@ figcaption p{
 
 .properties_main {
     text-align: justify;
-    height: 100%;
+    height: 1000px;
+    width: 1800px;
+    border: yellow solid 10px;
 }
 
 .main {
     font-size: 2em;
-
-}
-
-.properties p {
-    width: 100%;
+    border: solid green 10px;
     text-align: center;
+
 }
 
-.prts {
-    width: 1000px;
-    height: 2000px;
+.Images{
+    width: 1800px;
+    height: 700px;
+
+    border: 10px red solid;
+}
+.Images img{
+    height: 500px;
+    width:400px;
 }
 
-.prts .palace {
+.prts__pal1{
     float: left;
-    height: fit-content;
+    height: 400px;
     width: 100px;
     padding: 10px;
 }
 
 .prts .ptrs_ror2 {
-    height: 1000px;
-    width: fit-content;
+    margin: auto;
+
+    height: 400px;
+    width: 300px;
 
 }
-.prts 
+.prts_rex3{
+    height: 400px;
+    width: 300px;
+    float: right;
+    margin-right: 500px;
+    content: normal;
+
+    border: 10px yellow solid;
+
+}
 
 /* Customers*/
 .customers{
@@ -522,7 +538,7 @@ float: right;
 */
 
 .vallie {
-    width: 500px;
+    width: 300px;
     padding: 30px;
     margin: 20px;
     text-align: left;
@@ -564,5 +580,5 @@ float: right;
     margin-left: 10px;
     margin-right: 100px;
     padding: 20px;
-    width: 200px;
+    width: 150px;
 }
