--- a/index.css
+++ b/index.css
@@ -13,30 +13,33 @@ max-width: fit-content;
 /* */
 .home_o{
     display: inline-block;
+    padding:.10px;
     
 
 }
 .home {
     color: black;
     height: 50px;
-    width: 1100px;
-    font-size: 20px;
-    border: 5px red solid;
+    width: 1280px;
+    font-size: 20px;    
     padding: 30px;
     float: right;
+
 }
 .hm_v {
     float: left;
     font-family: 'Ribbon 131 Bd BJ';
     font-size: 40px;
-    margin: 20px;
-    border: 10px solid yellow;
+    font-style: italic bold;
+    padding-right: 30px ;
+    
 }
 
 .home a {
-    color: black;
+    color: blue;
     text-decoration: none;
-    
+    font-size: 20px;
+    float: right;
 
 }
 
@@ -51,6 +54,7 @@ max-width: fit-content;
     margin: 10px;
     float: left;
     font-style: underline;
+    padding-left: 30px ;
 }
 
 .hm_r {
@@ -86,15 +90,15 @@ max-width: fit-content;
 .but_1 {
     float: right;
     min-width: 100px;
-    margin: 10px;
+    text-align: center;
     padding: 10px;
-    height: 80px;
-    color: white;
+    height: 40px;
+    
 
 }
 
 .but_1 a {
-    background-color: blue;
+    text-align: center;
     color: white;
 }
 
@@ -103,27 +107,32 @@ max-width: fit-content;
 /* Helping*/
 .Help_al {
     background-color: white;
-    
-    max-width: 1000px;
+    display: inline-block ;
+    max-width: 1200px;
     height: 900px;
 }
 
 .helping_1 {
-    height: 800px;
-    min-width: 300px;
+    margin:20px;
+    height: 300px;
+    width: 500px;
     float: left;
     text-align: left;
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    border: 10px red solid;
 }
 
 .helping_1 h1 {
     text-align: left;
     font-size: 2em;
+    width: 500px;
 }
 
 .helping_1 p {
     font-size: 2em;
+    width: 500px;
 }
 
 .crt_p {
@@ -152,7 +161,7 @@ max-width: fit-content;
 
 
 .video {
-    border : 10px black solid;
+    width:400px
 }
 
 .video_ico {
@@ -164,7 +173,7 @@ max-width: fit-content;
 
 /**/
 .search {
-    max-width: 1000px;
+    max-width: 1280px;
     padding: 10px;
     margin: auto;
     font-size: 2    em;
