--- a/index.css
+++ b/index.css
@@ -5,34 +5,36 @@
 body {
     margin: 0;
     background-color: whitesmoke;
-max-width: fit-content;
+    max-width: fit-content;
     font-size: 1em;
-    
+
 }
 
 /* */
-.home_o{
+.home_o {
     display: inline-block;
-    padding:.10px;
-    
+    padding: .10px;
+
 
 }
+
 .home {
     color: black;
     height: 50px;
     width: 1280px;
-    font-size: 20px;    
+    font-size: 20px;
     padding: 30px;
     float: right;
 
 }
+
 .hm_v {
     float: left;
     font-family: 'Ribbon 131 Bd BJ';
     font-size: 40px;
     font-style: italic bold;
-    padding-right: 30px ;
-    
+    padding-right: 30px;
+
 }
 
 .home a {
@@ -54,7 +56,7 @@ max-width: fit-content;
     margin: 10px;
     float: left;
     font-style: underline;
-    padding-left: 30px ;
+    padding-left: 30px;
 }
 
 .hm_r {
@@ -95,7 +97,7 @@ max-width: fit-content;
     height: 40px;
     background-color: blue;
     border-radius: 20px;
-    
+
 
 }
 
@@ -108,13 +110,13 @@ max-width: fit-content;
 
 /* Helping*/
 .Help_al {
-    display: inline-block ;
+    display: inline-block;
     max-width: 1200px;
     height: 600px;
 }
 
 .helping_1 {
-    margin:20px;
+    margin: 20px;
     height: 300px;
     width: 500px;
     float: left;
@@ -134,6 +136,7 @@ max-width: fit-content;
     font-size: 2em;
     width: 450px;
 }
+
 /*
 .crt_p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -144,13 +147,13 @@ max-width: fit-content;
 
 .House_Img {
     float: right;
-    max-width:700px;
+    max-width: 700px;
 
 }
 
 .House_Img img {
     margin: 20px;
-    width:550px;
+    width: 550px;
     height: 400px;
     float: right;
 }
@@ -165,12 +168,12 @@ max-width: fit-content;
 
 
 .video {
-    width:400px
+    width: 400px
 }
 
 .video_ico {
     padding: 10px;
-        font-size: 3em;
+    font-size: 3em;
     border-radius: 20px;
     margin: 20px;
     background-color: blue;
@@ -293,6 +296,7 @@ h2 {
     height: 900px;
     padding: 20px;
     margin: 20px;
+    color: darkslateblue;
 }
 
 .products h1 {
@@ -307,14 +311,20 @@ h2 {
 
 .prd_in h1 {
     font-size: 2em;
+    color: darkslateblue;
 }
-.items{
+
+.items {
     margin: auto;
     width: 1000px;
-    height: 600px;
+    height: 300px;
     display: inline-block;
+    color: darkslateblue;
 
-    border: 10px black solid;
+}
+
+.items h2 {
+    color: grey;
 }
 
 .location {
@@ -340,22 +350,16 @@ h2 {
     margin: auto;
     padding: 20px;
     text-align: center;
-    height: 500px;
+    height: 300px;
     width: 200px;
-    margin: auto;
+    margin-top: 40px;
     border-radius: 10px;
-
-
 }
-
-
-
 #smart {
-    height: 60px;
-    width: 80px;
-    margin: auto;
 
-
+    height: 120px;
+    width: 100px;
+    margin-top: 40px;
 }
 
 .official {
@@ -363,8 +367,12 @@ h2 {
     float: right;
     padding: 20px;
     text-align: center;
-    height: 500px;
+    height: 300px;
     width: 200px;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-right: 40px;
+
 }
 
 .secure {
@@ -427,13 +435,15 @@ p .sider2 {
     width: 100%;
     padding: 20px;
     margin: 20px;
-    
+
 }
-figcaption{
+
+figcaption {
 
     font-size: 2em;
 }
-figcaption p{
+
+figcaption p {
     font-size: 16px;
     text-align: left;
 }
@@ -452,18 +462,19 @@ figcaption p{
 
 }
 
-.Images{
+.Images {
     width: 1000px;
     height: 700px;
 
     border: 10px red solid;
 }
-.Images img{
+
+.Images img {
     height: 500px;
-    width:400px;
+    width: 400px;
 }
 
-.prts__pal1{
+.prts__pal1 {
     float: left;
     height: 400px;
     width: 100px;
@@ -477,7 +488,8 @@ figcaption p{
     width: 300px;
 
 }
-.prts_rex3{
+
+.prts_rex3 {
     height: 400px;
     width: 300px;
     float: right;
@@ -489,14 +501,15 @@ figcaption p{
 }
 
 /* Customers*/
-.customers{
+.customers {
     border: 10px solid blue;
-    
+
     margin: 10px;
     height: 1000px;
     width: 700px;
 }
-.customers_main{
+
+.customers_main {
     margin: 20px;
     height: 500px;
     width: 1000px;
@@ -504,11 +517,11 @@ figcaption p{
 
 }
 
-    .custo_in{
-        margin: 10px;
-        font-size: 1em;
-        text-align: center;
-    }
+.custo_in {
+    margin: 10px;
+    font-size: 1em;
+    text-align: center;
+}
 
 
 
@@ -543,9 +556,11 @@ figcaption p{
     text-align: left;
 
 }
-.but_5{
-float: right;
+
+.but_5 {
+    float: right;
 }
+
 /*Footer*/
 .footer {
     background-color: blue;
@@ -559,6 +574,7 @@ float: right;
     height: 1000px;
     display: block;
 }
+
 /*
 .ft_val_1 {
     padding: 10px;
@@ -575,7 +591,7 @@ float: right;
     text-align: left;
     font-family: 'Geneva', Tahoma, sans-serif;
     float: left;
-    
+
 
 }
 
@@ -587,7 +603,7 @@ float: right;
     margin: 20px;
     width: 200px;
 
-    
+
 }
 
 
@@ -598,7 +614,7 @@ float: right;
     margin: 20px;
     width: 200px;
     padding: 30px;
-    
+
 
 
 }
